third/index.css
nav{
    background-color: lightgray;
    height: 10vh;
    width: 100%;
    margin: 0;
}
.blue_box{
    display: inline-block;
    background-color: #0180BB;
    height: 8vh;
    width: 8%;
    margin: 10px;

}
.white{
    background-color: white;
height: 32vh;
width: 100%;

}
.blue{
    background-color: #0180BB;
    height: 15vh;
    width: 100%
}
.green{
    background-color: rgb(74, 247, 175);
    height: 15vh;
    width: 100%
}
.light_green{
    background-color: lightgreen;
    height: 15vh;
    width: 100%
}
.yellow{
    background-color: yellow;
    height: 15vh;
    width: 100%
}
h1{
    text-align: center;
    font-size: 3vw;

}

